<resources>
    <string name="app_name">BlockGuess</string>
    <string name="inc">© 2018 BlockGuess Inc</string>
    <string name="first_step">First step</string>
    <string name="select_bet">Select bet</string>
    <string name="first_explain">Players can choose to bet on the game. The more bets, the higher the winning rate.</string>
    <string name="second_step">Second step</string>
    <string name="fairness_algorthn">Fairness algorithm</string>
    <string name="second_explain">BlockGuess algorithm is open source, and players can access the random.org and BCH block browser query validation.</string>
    <string name="third_step">Third step</string>
    <string name="receive_prize">Receive a prize easily</string>
    <string name="third_explain">After the player wins the prize, the bonus is automatically issued to the player account.</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="sign_in_continue">Sign in continue to BlockGuess!</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="sign_in">Sign in</string>
    <string name="account_password_empty">Account or Password is empty!</string>
    <string name="donot_have_account">Don‘t have an account？</string>
    <string name="sign_up">Sign up</string>
    <string name="create_u_account">Create your account</string>
    <string name="invitation_code">Invitation Code</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="verify_code">Verify Code</string>
    <string name="enter_verify_code">Enter your verify code here</string>
    <string name="password">Password</string>
    <string name="forget_password_">Forgot password</string>
    <string name="u_email_address">Your Email address</string>
    <string name="enter_u_verify_code">Enter your verify code here</string>
    <string name="new_password">New Password</string>
    <string name="reset_now">Reset Now</string>
    <string name="game">Game</string>
    <string name="lottery">Lottery</string>
    <string name="wallet">Wallet</string>
    <string name="my">My</string>
    <string name="invite_friend_play_game">Invite users to receive bonus rewards</string>
    <string name="learn_more">More Details</string>
    <string name="single_note">Single Note</string>
    <string name="win">Win</string>
    <string name="new_round_in_progress">New Round In Progress</string>
    <string name="play">PLAY</string>
    <string name="ranking">Ranking</string>
    <string name="bch_3d">BCH3D</string>
    <string name="bch_lucky">BCHLUCKY</string>
    <string name="bch_lotto">BCHLOTTO</string>
    <string name="god_player">God Player</string>
    <string name="super_player">Super Player</string>
    <string name="best_partner">Best Partner</string>
    <string name="my_wallet">My Wallet</string>
    <string name="balance">Balance</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="recharge">Recharge</string>
    <string name="transaction_history">Transaction History</string>
    <string name="sign_out">Sign Out</string>
    <string name="partner_plan">Partner Plan</string>
    <string name="give">Give</string>
    <string name="reward">Reward</string>
    <string name="betting_record">Betting Record</string>
    <string name="winning_record">Winning Record</string>
    <string name="change_password">Change Password</string>
    <string name="about_us">About Us</string>
    <string name="refresh_code">Refresh Code</string>
    <string name="captcha_png">/api/v1/captcha/%s.png</string>
    <string name="note">Note</string>
    <string name="progress_">%d/%d</string>
    <string name="over_note_lottery">Over 1,000 Note Lottery</string>
    <string name="bch">BCH</string>
    <string name="bch_win">%.3f BCH Win</string>
    <string name="nomber_">NO.%d</string>
    <string name="buy_bchlucky">Buy BCHLucky</string>
    <string name="buy_lotto">Buy BCHLotto</string>
    <string name="buy_bch3d">Buy BCH3D</string>
    <string name="buy_bchfree">Buy BCH3DFREE</string>
    <string name="unknown">Unknown</string>
    <string name="contract">Contract</string>
    <string name="award">Award</string>
    <string name="three_win_200_times">Choose three digits and win 200 times</string>
    <string name="betting_three">Hundred</string>
    <string name="betting_two">Ten</string>
    <string name="betting_one">Unit</string>
    <string name="betting_bch3d">Bet BCH3D</string>
    <string name="betting_bch3d_stage">BCH3D NO. %d</string>
    <string name="betting_lotto_stage">BCHLOTTO NO. %d</string>
    <string name="betting_bch3d_end">Stop betting after %s second</string>
    <string name="sure">Sure</string>
    <string name="machine_selects_4">Random 4 Betting</string>
    <string name="clear">Clear</string>
    <string name="waiting_prize">Waitting</string>
    <string name="select_single">Random 1 Betting</string>
    <string name="select_four">Random 4 Betting</string>
    <string name="select_hands">Betting By Hands</string>
    <string name="agree_read">I have read and agreed</string>
    <string name="game_rule">《Game Rule》</string>
    <string name="clear_all">Clear All</string>
    <string name="total_select_times">Bet %d x %d Time</string>
    <string name="betting_count_max">8 shots at most.</string>
    <string name="betting_count_">%d shots at most.</string>
    <string name="pay_bch">%sBCH</string>
    <string name="max_will">，Win at most</string>
    <string name="buy">Buy</string>
    <string name="times">Times</string>
    <string name="pay">Pay</string>
    <string name="betting_at_least_one">At least one note</string>
    <string name="times_at_least_">At least  %d times</string>
    <string name="times_at_most_">At most  %d times</string>
    <string name="betting_at_most_">At most %d</string>
    <string name="please_agree_rule">Please check the consent rule</string>
    <string name="betting_bchlucky">Betting BCHLucky</string>
    <string name="betting_bchlucky_stage">BCHLucyk NO.%d</string>
    <string name="become_a_lucky_man">Become a lucky man, 1000 times the best prize.</string>
    <string name="win_max">，Win at most</string>
    <string name="betting_bch_lucky">Betting BCHLucky</string>
    <string name="selled_amount">Sell %d</string>
    <string name="remained_amount">Remain %d</string>
    <string name="stakes">Stake</string>
    <string name="decimal_bch">%sBCH</string>
    <string name="pay_result">Payment results</string>
    <string name="pay_success">Payment Success</string>
    <string name="view_order">View the order</string>
    <string name="transfer_friend">Present to friends</string>
    <string name="wining_amount">Wining Amount</string>
    <string name="open_prize">Underway</string>
    <string name="not_award">Not winning</string>
    <string name="the_wining">Winning</string>
    <string name="to_be_award">Waitting</string>
    <string name="bet_and_total">Bet %d, Total: %sBCH</string>
    <string name="win_amount_bch">+%sBCH</string>
    <string name="free_bch_3d">Free BCH3D</string>
    <string name="betting_detail">Betting Detail</string>
    <string name="no_">NO.</string>
    <string name="no_period">NO.%d</string>
    <string name="bet">Bet</string>
    <string name="bet_content">Bet content</string>
    <string name="amount">Amount</string>
    <string name="datetime">DateTime</string>
    <string name="txid">Txid</string>
    <string name="wining_number">Wining Number</string>
    <string name="bch3d_lottery">BCH3D Lottery</string>
    <string name="bchlucky_lottery">BCHLucky Lottery</string>
    <string name="contract_no_">NO.%d</string>
    <string name="random_org_number">random.org Random : %s</string>
    <string name="verify">Verify</string>
    <string name="ending_height">block height of ending betting</string>
    <string name="block_height">block height of lottery</string>
    <string name="end_time_betting">End time of betting</string>
    <string name="contract_address">Contract address</string>
    <string name="winning_player">Winning player</string>
    <string name="my_betting">My betting</string>
    <string name="no_winning_record">No winning record</string>
    <string name="no_transaction_history">No transaction history</string>
    <string name="your_bch_address">Your BCH Address</string>
    <string name="copy_address">Copy Address</string>
    <string name="save_image_album">Save image to album</string>
    <string name="receive_bch">Receive BCH</string>
    <string name="address_been_copied">The address has been copied</string>
    <string name="photo_save_int_album">Photo saved int photo album</string>
    <string name="miner_fee">Miner Fee</string>
    <string name="slow_speed">Slow Speed</string>
    <string name="fast_sped">Fast Speed</string>
    <string name="send_now">Send Now</string>
    <string name="send_bch">Send BCH</string>
    <string name="enter_address">Enter address</string>
    <string name="enter_email_code">Enter your email code</string>
    <string name="enter_amount_here">Enter amount here</string>
    <string name="tips_empty_address_amount">Addrss or Amount is Empty</string>
    <string name="tips_empty_address_code_amount">Addrss,Email code or Amount is Empty</string>
    <string name="point_camera_at_qrcode">Point your camera at the QR code</string>
    <string name="old_password">Old Password</string>
    <string name="change_now">Change Now</string>
    <string name="password_change_success">Password modified successfully</string>
    <string name="accumulated_reward">Accumulated Reward</string>
    <string name="your_exclusive_invitation_code">Your exclusive invitation code</string>
    <string name="invite_to_make_bch">Invite to make BCH now</string>
    <string name="partner_rules">Partner Rules</string>
    <string name="partner_list">Partner list</string>
    <string name="partner_dynamic">Partner dynamic</string>
    <string name="date">Date</string>
    <string name="plan_content">Every BLOCKGUESS user has a unique invitation code to invite new user to register BLOCKGUESS taking part in guess. Commission according to a certain ratio of invitee user betting amounts is refunded to the inviter by the platform once the invitee user betting a transaction successfully.</string>
    <string name="partner_specification">Partner specification</string>
    <string name="specification_content">1.After invitee registering successfully, commission discount is generated correspondingly while emerging a true betting.\n
2.Commission discount is sent to your account by means of BCH.\n
3.Commission discount proportion is 1% of betting amounts by user.\n
4.Settlement method: settling at UTC 8:00 every weekend.\n
5.Commission less than 0.0001BCH delaying payment accumulates to the next period.\n
6.Unlimited commission restitution.\n</string>
    <string name="share">Share</string>
    <string name="share_content">Send you a note of 0.1BCH lottery! Register with my invitation code% s, or click on "https://blockguess.fun/bch3d/partnerplan.html?Code=% s" to get it, lie at home and make money and fly to the world for the weekend。</string>
    <string name="dynamic_income">+ Dynamic income</string>
    <string name="dividend">Dividend</string>
    <string name="transaction_detile">Transaction Detile</string>
    <string name="category">Category</string>
    <string name="status">Status</string>
    <string name="tips_order_awarded">If the order is awarded, the bonus will be directly addressed to a friend\'s wallet address.</string>
    <string name="receive_address">Receiving address</string>
    <string name="receive_email">Receiving Email</string>
    <string name="gift">Gift</string>
    <string name="gift_friend">Present to friends</string>
    <string name="gift_success">Gift success</string>
    <string name="gift_result">Return to the result</string>
    <string name="order_review">View the order</string>
</resources>