<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@id/img_close"
        android:layout_width="@dimen/dp_24"
        android:layout_height="@dimen/dp_24"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_12"
        android:background="@mipmap/btn_close_big"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_134"
        android:text="@string/welcome_back"
        android:textColor="@color/color_00115d"
        android:textSize="@dimen/dp_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_175"
        android:text="@string/sign_in_continue"
        android:textColor="@color/color_8a94be"
        android:textSize="@dimen/dp_16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@id/edit_account"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_50"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_234"
        android:background="@drawable/shape_rectangle_f3f4fa_r12"
        android:drawableLeft="@mipmap/ic_email"
        android:drawablePadding="@dimen/dp_12"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="@dimen/dp_12"
        android:textColor="@color/color_00115d"
        android:textColorHint="@color/color_586085"
        android:textSize="@dimen/dp_15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@id/edit_password"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_50"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/shape_rectangle_f3f4fa_r12"
        android:drawableLeft="@mipmap/ic_password"
        android:drawablePadding="@dimen/dp_12"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/dp_12"
        android:textColor="@color/color_00115d"
        android:textColorHint="@color/color_586085"
        android:textSize="@dimen/dp_15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_account" />

    <TextView
        android:id="@id/txt_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_14"
        android:text="@string/forget_password"
        android:textColor="@color/color_8a94be"
        android:textSize="@dimen/dp_14"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_password" />

    <TextView
        android:id="@id/txt_sign_in"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_50"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/shape_rectangle_645aff_r12"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="@color/color_white"
        android:textSize="@dimen/dp_17"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_forget_password" />

    <TextView
        android:id="@id/txt_no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_40"
        android:text="@string/donot_have_account"
        android:textColor="@color/color_8da2b5"
        android:textSize="@dimen/dp_14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/txt_sign_up" />

    <TextView
        android:id="@id/txt_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_40"
        android:text="@string/sign_up"
        android:textColor="@color/color_645aff"
        android:textSize="@dimen/dp_14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toRightOf="@id/txt_no_account"
        app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>