<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_rectangle_white_r12"
    android:paddingBottom="@dimen/dp_32"
    android:paddingLeft="@dimen/dp_24"
    android:paddingRight="@dimen/dp_24"
    android:paddingTop="@dimen/dp_12">

    <ImageView
        android:id="@id/img_close"
        android:layout_width="@dimen/dp_22"
        android:layout_height="@dimen/dp_22"
        android:background="@mipmap/btn_close_gray"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@id/txt_partner_plan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/partner_plan"
        android:textColor="@color/color_00115d"
        android:textSize="@dimen/dp_16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_close" />

    <TextView
        android:id="@id/txt_partner_plan_content"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/plan_content"
        android:textColor="@color/color_586085"
        android:textSize="@dimen/dp_13"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_partner_plan" />

    <TextView
        android:id="@id/txt_partner_specification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/partner_specification"
        android:textColor="@color/color_00115d"
        android:textSize="@dimen/dp_13"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_partner_plan_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_24"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_9"
        android:text="@string/specification_content"
        android:textColor="@color/color_586085"
        android:textSize="@dimen/dp_13"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_partner_specification" />
</androidx.constraintlayout.widget.ConstraintLayout>