<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f3f4fa">

    <LinearLayout
        android:id="@id/linearlayout_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_white"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dp_12"
        android:paddingLeft="@dimen/dp_12"
        android:paddingRight="@dimen/dp_12">

        <TextView
            android:id="@id/txt_bch_3d"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_weight="1"
            android:background="@drawable/selector_rectangle_645aff_white_r6_left"
            android:gravity="center"
            android:text="@string/bch_3d"
            android:textColor="@color/color_645aff"
            android:textSize="@dimen/dp_13" />

        <TextView
            android:id="@id/txt_bch_lucky"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_weight="1"
            android:background="@drawable/selector_rectangle_645aff_white_r6_centre"
            android:gravity="center"
            android:text="@string/bch_lucky"
            android:textColor="@color/color_645aff"
            android:textSize="@dimen/dp_13" />

        <TextView
            android:id="@id/txt_lotto"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_weight="1"
            android:background="@drawable/selector_rectangle_645aff_white_r6_right"
            android:gravity="center"
            android:text="@string/bch_lotto"
            android:textColor="@color/color_645aff"
            android:textSize="@dimen/dp_13" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@id/recycler_lottery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearlayout_top" />
</RelativeLayout>
